[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0.81"
eyre = "0.6.8"
dotenv = "0.15.0"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }